--- a/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1.csproj
@@ -64,6 +64,7 @@
     <Compile Include="views\LoginPage.xaml.cs">
       <DependentUpon>LoginPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="views\Test.cs" />
     <Page Include="customcontrols\TextBocControlls.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
