--- a/WpfApp1/packages.config
+++ b/WpfApp1/packages.config
@@ -1,4 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DynamicLanguageRuntime" version="1.3.0" targetFramework="net472" />
+  <package id="Emgu.CV" version="4.4.0.4099" targetFramework="net472" />
+  <package id="Emgu.CV.Bitmap" version="4.4.0.4099" targetFramework="net472" />
+  <package id="Emgu.CV.runtime.windows" version="4.4.0.4099" targetFramework="net472" />
+  <package id="Emgu.CV.UI" version="4.4.0.4099" targetFramework="net472" />
+  <package id="IronPython" version="2.7.11" targetFramework="net472" />
   <package id="MahApps.Metro.IconPacks" version="4.8.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="OpenCvSharp4" version="4.5.0.20201013" targetFramework="net472" />
+  <package id="ResponsiveGrid" version="0.3.3" targetFramework="net472" />
+  <package id="RestSharp" version="106.11.7" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Drawing.Common" version="5.0.0" targetFramework="net472" />
+  <package id="System.Drawing.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
+  <package id="Tesseract" version="3.3.0" targetFramework="net472" />
+  <package id="Tesseract.Net.SDK" version="1.15.342" targetFramework="net472" />
 </packages>
