--- a/WpfApp1/packages.config
+++ b/WpfApp1/packages.config
@@ -5,20 +5,51 @@
   <package id="Emgu.CV.Bitmap" version="4.4.0.4099" targetFramework="net472" />
   <package id="Emgu.CV.runtime.windows" version="4.4.0.4099" targetFramework="net472" />
   <package id="Emgu.CV.UI" version="4.4.0.4099" targetFramework="net472" />
+  <package id="IronOcr" version="2020.11.2" targetFramework="net472" />
   <package id="IronPython" version="2.7.11" targetFramework="net472" />
   <package id="MahApps.Metro.IconPacks" version="4.8.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Connections.Abstractions" version="5.0.1" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Http.Connections.Client" version="5.0.1" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Http.Connections.Common" version="5.0.1" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="5.0.1" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.SignalR.Client" version="5.0.1" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.SignalR.Client.Core" version="5.0.1" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.SignalR.Common" version="5.0.1" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.SignalR.Protocols.Json" version="5.0.1" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="5.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="NumSharp" version="0.20.5" targetFramework="net472" />
   <package id="OpenCvSharp4" version="4.5.0.20201013" targetFramework="net472" />
   <package id="ResponsiveGrid" version="0.3.3" targetFramework="net472" />
   <package id="RestSharp" version="106.11.7" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="5.0.0" targetFramework="net472" />
   <package id="System.Drawing.Common" version="5.0.0" targetFramework="net472" />
   <package id="System.Drawing.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.IO" version="4.3.0" targetFramework="net472" />
+  <package id="System.IO.Pipelines" version="5.0.1" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
+  <package id="System.Net.Sockets" version="4.3.0" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="5.0.0" targetFramework="net472" />
+  <package id="System.Text.Json" version="5.0.0" targetFramework="net472" />
+  <package id="System.Threading.Channels" version="5.0.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="Tesseract" version="3.3.0" targetFramework="net472" />
   <package id="Tesseract.Net.SDK" version="1.15.342" targetFramework="net472" />
 </packages>
