--- a/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1.csproj
@@ -350,6 +350,8 @@
     <Compile Include="Models\AreaModels.cs" />
     <Compile Include="Models\FeesModel.cs" />
     <Compile Include="Models\KategoriModels.cs" />
+    <Compile Include="Models\ListFees.cs" />
+    <Compile Include="Models\SelectedFeesModel.cs" />
     <Compile Include="Models\UserModels.cs" />
     <Compile Include="Services\AreaServices.cs" />
     <Compile Include="Services\AuthServices.cs" />
@@ -357,10 +359,10 @@
     <Compile Include="Services\GetToken.cs" />
     <Compile Include="Services\KategoriServices.cs" />
     <Compile Include="Services\MainServices.cs" />
-    <Compile Include="ViewModel\AddAreaViewModels.cs" />
-    <Compile Include="ViewModel\AreavIewModels.cs" />
+    <Compile Include="ViewModel\Area\AddAreaViewModels.cs" />
+    <Compile Include="ViewModel\Area\AreavIewModels.cs" />
+    <Compile Include="ViewModel\Area\EditAreaViewModels.cs" />
     <Compile Include="ViewModel\AuthViewModels.cs" />
-    <Compile Include="ViewModel\ICloseable.cs" />
     <Compile Include="ViewModel\ScannerViewModel.cs" />
     <Compile Include="views\AreaEditWindow.xaml.cs">
       <DependentUpon>AreaEditWindow.xaml</DependentUpon>
